external-crates/move/crates/move-compiler/tests/move_check/parser/nested_module_use_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/parser/nested_module_use_invalid.move:18:59
   │
18 │     use 0x42::{a::{A, Self as q, foo as bar}, b::{Self as q, B, baz as bar}};
   │                               -                           ^ Duplicate module alias 'q'. Module aliases must be unique within a given namespace
   │                               │                            
   │                               Alias previously defined here

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/parser/nested_module_use_invalid.move:18:72
   │
18 │     use 0x42::{a::{A, Self as q, foo as bar}, b::{Self as q, B, baz as bar}};
   │                                         ---                            ^^^ Duplicate module member or alias 'bar'. Top level names in a namespace must be unique
   │                                         │                               
   │                                         Alias previously defined here

error[E03003]: unbound module member
   ┌─ tests/move_check/parser/nested_module_use_invalid.move:21:20
   │
21 │         let x: A = q::bar();
   │                    ^^^^^^ Invalid module access. Unbound function 'bar' in module '0x42::b'

error[E03005]: unbound unscoped name
   ┌─ tests/move_check/parser/nested_module_use_invalid.move:22:18
   │
22 │         let _y = f(x);
   │                  ^ Unbound function 'f' in current scope

warning[W09001]: unused alias
   ┌─ tests/move_check/parser/nested_module_use_invalid.move:30:31
   │
30 │     use 0x42::{a::{A, Self as q, foo as f}, a as g};
   │                               ^ Unused 'use' of alias 'q'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
   ┌─ tests/move_check/parser/nested_module_use_invalid.move:30:41
   │
30 │     use 0x42::{a::{A, Self as q, foo as f}, a as g};
   │                                         ^ Unused 'use' of alias 'f'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03005]: unbound unscoped name
   ┌─ tests/move_check/parser/nested_module_use_invalid.move:34:18
   │
34 │         let _y = bar(x);
   │                  ^^^ Unbound function 'bar' in current scope
